--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,15 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
+
+    // swagger
+    implementation 'io.springfox:springfox-swagger2:2.6.1'
+    implementation 'io.springfox:springfox-swagger-ui:2.6.1'
+
+    //spring security
+    //implementation 'org.springframework.boot:spring-boot-starter-security'
+    //implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
 }
 
 tasks.named('test') {
