--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+spring.profiles.include=jwt
+
