--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
 #spring.datasource.password=
-spring.profiles.active=local
+spring.profiles.active=prod
 logging.level.root=info
 
 #DATABASE
