Debug >> Info Update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 #spring.datasource.username=sa
 #spring.datasource.password=
 spring.profiles.active=prod
-logging.level.root=debug
+logging.level.root=info
 
 #DATABASE
 # DATABASE
