JDBC Log Update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,9 @@ logging.level.root=info
 
 #DATABASE
 # DATABASE
-spring.datasource.url=jdbc:postgresql://database-2.cekdulhkgjrx.ap-northeast-2.rds.amazonaws.com:5432/postgres
-spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:log4jdbc:postgresql://database-2.cekdulhkgjrx.ap-northeast-2.rds.amazonaws.com:5432/postgres
+# spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.username=postgres
 spring.datasource.password=dongsoo8706
 
