--- a/src/main/resources/logback-prod.properties
+++ b/src/main/resources/logback-prod.properties
@@ -1,4 +1,4 @@
-#???? ??
-log.config.path=/home/ubuntu/logs/prod
-#???? ??
+
+# log.config.path=/home/ubuntu/logs/prod
+log.config.path=/Users/changdongsoo/logs/local
 log.config.filename=prod_log
