--- a/build.gradle
+++ b/build.gradle
@@ -22,43 +22,27 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+    implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
+    implementation 'io.springfox:springfox-swagger2:2.6.1'
+    implementation 'io.springfox:springfox-swagger-ui:2.6.1'
+    //security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    //jwt
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    //validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    //junit
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
 
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     // runtimeOnly 'com.h2database:h2'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
-
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
-
-
-    implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
-
-    // swagger
-    implementation 'io.springfox:springfox-swagger2:2.6.1'
-    implementation 'io.springfox:springfox-swagger-ui:2.6.1'
-
-    //spring security
-    //implementation 'org.springframework.boot:spring-boot-starter-security'
-    //implementation 'io.jsonwebtoken:jjwt:0.9.1'
-
-
-    //security
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-
-    //jwt
-    implementation 'io.jsonwebtoken:jjwt:0.9.1'
-
-    //validation
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-    //junit
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-
-    //logback access
-    // implementation 'net.rakugakibox.spring.boot:logback-access-spring-boot-starter:2.12.0'
 }
 
 tasks.named('test') {
