--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     //validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    //spring actuator
+//    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     //junit
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
